src/lexer/snapshots/rust_interpreter__lexer__test__assignments1.snap
---
source: src/lexer/test.rs
description: let five = 5;
expression: "debug_print(\"let five = 5;\", tokens)"
---
[
    Token(token: 'let', slice: 'let'),
    Token(token: 'five', slice: 'five'),
    Token(token: '=', slice: '='),
    Token(token: '5', slice: '5'),
    Token(token: ';', slice: ';'),
    Token(token: 'EOF', slice: ''),
]
