src/lexer/snapshots/rust_interpreter__lexer__test__assignments2.snap
---
source: src/lexer/test.rs
description: let ten = 10;
expression: "debug_print(\"let ten = 10;\", tokens)"
---
[
    Token(token: 'let', slice: 'let'),
    Token(token: 'ten', slice: 'ten'),
    Token(token: '=', slice: '='),
    Token(token: '10', slice: '10'),
    Token(token: ';', slice: ';'),
    Token(token: 'EOF', slice: ''),
]
