src/lexer/snapshots/rust_interpreter__lexer__test__conditional.snap
---
source: src/lexer/test.rs
description: "if (5 < 10) {\n        return true;\n    } else {\n        return false;\n    }"
expression: "debug_print(r\"if (5 < 10) {\n        return true;\n    } else {\n        return false;\n    }\",\n    tokens)"
---
[
    Token(token: 'if', slice: 'if'),
    Token(token: '(', slice: '('),
    Token(token: '5', slice: '5'),
    Token(token: '<', slice: '<'),
    Token(token: '10', slice: '10'),
    Token(token: ')', slice: ')'),
    Token(token: '{', slice: '{'),
    Token(token: 'return', slice: 'return'),
    Token(token: 'true', slice: 'true'),
    Token(token: ';', slice: ';'),
    Token(token: '}', slice: '}'),
    Token(token: 'else', slice: 'else'),
    Token(token: '{', slice: '{'),
    Token(token: 'return', slice: 'return'),
    Token(token: 'false', slice: 'false'),
    Token(token: ';', slice: ';'),
    Token(token: '}', slice: '}'),
    Token(token: 'EOF', slice: ''),
]
