src/lexer/snapshots/rust_interpreter__lexer__test__dictionary.snap
---
source: src/lexer/mod.rs
expression: "(r#\"{ \"foo\": \"bar\" };\"#, tokens)"
---
(
    "{ \"foo\": \"bar\" };",
    [
        LBrace,
        Str(
            "foo",
        ),
        Colon,
        Str(
            "bar",
        ),
        RBrace,
        Semicolon,
        Eof,
    ],
)
