src/lexer/snapshots/rust_interpreter__lexer__test__equality1.snap
---
source: src/lexer/test.rs
description: 5 < 10 > 5;
expression: "debug_print(\"5 < 10 > 5;\", tokens)"
---
[
    Token(token: '5', slice: '5'),
    Token(token: '<', slice: '<'),
    Token(token: '10', slice: '10'),
    Token(token: '>', slice: '>'),
    Token(token: '5', slice: '5'),
    Token(token: ';', slice: ';'),
    Token(token: 'EOF', slice: ''),
]
