src/lexer/snapshots/rust_interpreter__lexer__test__equality2.snap
---
source: src/lexer/mod.rs
expression: "(\"10 == 10;\", tokens)"
---
(
    "10 == 10;",
    [
        Int(
            "10",
        ),
        Equal,
        Int(
            "10",
        ),
        Semicolon,
        Eof,
    ],
)
