src/lexer/snapshots/rust_interpreter__lexer__test__equality3.snap
---
source: src/lexer/test.rs
description: 10 != 9;
expression: "debug_print(\"10 != 9;\", tokens)"
---
[
    Token(token: '10', slice: '10'),
    Token(token: '!=', slice: '!='),
    Token(token: '9', slice: '9'),
    Token(token: ';', slice: ';'),
    Token(token: 'EOF', slice: ''),
]
