src/lexer/snapshots/rust_interpreter__lexer__test__operators.snap
---
source: src/lexer/mod.rs
expression: "(\"!-/*5;\", tokens)"
---
(
    "!-/*5;",
    [
        Bang,
        Minus,
        ForwardSlash,
        Asterisk,
        Int(
            "5",
        ),
        Semicolon,
        Eof,
    ],
)
