src/lexer/snapshots/rust_interpreter__lexer__test__string_literal.snap
---
source: src/lexer/test.rs
description: "\"hello world\";"
expression: "debug_print(r#\"\"hello world\";\"#, tokens)"
---
[
    Token(token: '"hello world"', slice: '"hello world"'),
    Token(token: ';', slice: ';'),
    Token(token: 'EOF', slice: ''),
]
